[package]
name = "shiny-pancake"
description = "A renderer that takes commands from standard input."
version = "0.2.0"
authors = ["SwagColoredKitteh <kittycake@openmailbox.org>"]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/SwagColoredKitteh/shiny-pancake"
repository = "https://github.com/SwagColoredKitteh/shiny-pancake"

[dependencies]
piston_window = "0.57.0"
clap = "2.19.0"
