[package]
name = "shiny-pancake"
description = "A renderer that takes commands from standard input."
version = "0.3.0"
authors = ["SwagColoredKitteh <kittycake@openmailbox.org>"]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/SwagColoredKitteh/shiny-pancake"
repository = "https://github.com/SwagColoredKitteh/shiny-pancake"

[features]
default = ["glutin-backend"]
glutin-backend = ["pistoncore-glutin_window"]
sdl2-backend = ["pistoncore-sdl2_window"]

[dependencies]
piston_window = "0.58.0"
pistoncore-window = "0.24.0"
clap = "2.19.0"

[dependencies.pistoncore-sdl2_window]
version = "0.37.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.33.0"
optional = true
